examples/test/testpolicy7048.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7048
  namespace: namespace130
spec:
  podSelector:
    matchLabels:
      key37: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value25
          key1: value12
      podSelector:
        matchLabels:
          key18: value26
          key4: value11
